Backend arreglado, docs nuevo, cliente nuevo y front actualizacion del front
