# Front/Front-Usuario-App/src/main/java/main/controllers/RegistroHorasController.java
@@ -1,11 +1,19 @@
 package main.controllers;
 
+import java.time.LocalDate;
+import java.util.List;
+
+import org.openapitools.client.model.Alumno;
+import org.openapitools.client.model.FechaPractica;
+import org.openapitools.client.model.RegistroPractica;
+import org.openapitools.client.model.UsuarioDTO;
+
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.control.Label;
 import javafx.scene.control.TextField;
 import javafx.stage.Stage;
-import main.gui.AppController;
+import main.apiService.ApiService;
 
 public class RegistroHorasController extends AppController {
 
@@ -23,19 +31,18 @@ public class RegistroHorasController extends AppController {
 
     @FXML
     private Label labelPorcentajeSobreTotal;
-
+    
     @FXML
-    private TextField textFieldHorasRealizadas;
+    private Label labelHorasRealizadas;
 
-    @FXML
-    void actualizar(ActionEvent event) {
+    
+    private ApiService apiService = new ApiService(); // Instancia del servicio de API
 
-    }
 
 
     @FXML
     void irMenu(ActionEvent event) {
-    	changeScene(FXML_MENU);
+    	changeScene(FXML_VERDATOS);
 
     }
 
@@ -54,5 +61,49 @@ public class RegistroHorasController extends AppController {
             stage.close();  // Cierra la ventana
         }
     }
+    
+    
+    @FXML
+  	public void initialize() {
+      	mostrarResumenPracticas();
+      	
+      }
+    /**
+     * Calcula y muestra el resumen de prácticas del alumno.
+     *
+     * @param idUsuario El ID del usuario.
+     */
+    private void mostrarResumenPracticas() {
+        // Obtén los registros de prácticas del alumno
+    	UsuarioDTO usuario = (UsuarioDTO) getParam("usuario");
+    	
+        List<RegistroPractica> registros  =	apiService.consultarDetalles(usuario.getId(), null, null);
+        
+
+        if (registros == null) {
+            mostrarAlerta("Error", "No se pudieron cargar los registros de prácticas.");
+            return;
+        }
+
+        // Calcula las horas totales, realizadas y pendientes
+        double horasTotales = 370; // Supongamos que el total de horas requeridas es 370
+        double horasRealizadas = 0;
+
+        for (RegistroPractica registro : registros) {
+            horasRealizadas += registro.getCantidadHoras();
+        }
+
+        double porcentajeHoras = (horasRealizadas / horasTotales) * 100;
+        double horasPendientes = horasTotales - horasRealizadas;
+
+        // Muestra el resumen en los labels
+        
+        labelHorasTotal.setText(String.valueOf(horasTotales));
+        labelHorasRealizadas.setText(String.valueOf(horasRealizadas));
+        labelPorcentajeSobreTotal.setText(String.format("%.2f%%", porcentajeHoras));
+        labelHorasPendientesRealizar.setText(String.valueOf(horasPendientes));
+      
+    }
+
 
 }
